--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta property="og:title"
+    content="오늘의 할일"/>
+    <meta property="og:description"
+    content="오늘의 할일을 정리하는 앱"/>
+    <meta property="og:image"
+    src="/public/thumbnail.png"/>
+    <title>오늘의 할일</title>
+
   </head>
   <body>
     <div id="root"></div>
