--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title"
-    content="오늘의 할일"/>
+      content="오늘의 할일"/>
     <meta property="og:description"
-    content="오늘의 할일을 정리하는 앱"/>
+      content="오늘의 할일을 정리하는 앱"/>
     <meta property="og:image"
-    src="/public/thumbnail.png"/>
+      content="/public/thumbnail.png"/>
     <title>오늘의 할일</title>
 
   </head>
